--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
   <p>The freshest meme coin on Solana — join the handsomeness revolution!</p>
   <p>
     <a href="https://solscan.io/token/mntLN6xhxhdGQbPMgeTLgNN9QTECQHPkAZLAvo2UXE1" target="_blank" rel="noopener">View on Solscan</a> |
-    <a href="https://dexscreener.com/solana/mntLN6xhxhdGQbPMgeTLgNN9QTECQHPkAZLAvo2UXE1" target="_blank" rel="noopener">View on Dexscreener</a>
+    <a href="https://dexscreener.com/solana/mntLN6xhxhdGQbPMgeTLgNN9QTECQHPkAZLAvo2UXE1" target="_blank" rel="noopener">View on Dexscreener</a> |
+    <a href="https://x.com/handsomesquidco" target="_blank" rel="noopener">Follow on Twitter</a>
   </p>
 </body>
 </html>
